--- a/css/meflat-blue.css
+++ b/css/meflat-blue.css
@@ -372,7 +372,7 @@ a:focus,
 
 .jumbotron {
     
-    background:#38A5DB;
+    background:#002E63;
     color:#fff;
     padding:0;
     margin-bottom:0;
