--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,4 +1,4 @@
-/*!
+/*/*!
  * Bootstrap v3.3.4 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
@@ -6585,3 +6585,4 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+*/
